#21: Refactor data loading - DataProvider Loads data once when launching the app, instead of reading jsons every time